# Neural_network_experimental

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  memory.txt  neural_network_SDL.bmarks  neural_network_SDL.cbp  neural_network_SDL.depend  neural_network_SDL.layout  output.txt
cmake/: compiler_flags.cmake  dependencies.cmake  paths.cmake
cmake/lib/: highway.cmake  raylib.cmake  sdl2.cmake  sdl3.cmake
res/: compilation.txt
res/old/: const_neural_mini8(1).hpp  oldCode.txt  test  Текстовый документ.txt
res/old/NeuronF/: neural_object(dublic1).hpp  neural_object(dublic2).hpp  neural_object(dublic3).hpp  neural_object(dublic4).hpp  neuro(dublic2).hpp  neuron(dublic1).hpp
src/: includes.cpp  main.cpp
src/core/: timers.hpp
src/core/Neuron32/: activate.hpp  utils.hpp
src/core/Neuron32/CPU/: neuron.hpp
src/core/Neuron32/Objects/: dynamic_neural_network_object.hpp  dynamic_neural_network_object_pull.hpp  static_neural_network_object.hpp
src/core/buttons/: button.hpp
src/core/info/: device_info.hpp
src/core/input/: multikey_input_checker.hpp
src/core/memory/: aligned_alloc_impl.hpp  const_memory_vectorization64.hpp
src/core/random/: randoms.hpp
src/headers/: auto_click.hpp  color_RGBA_computing_accelerator.hpp
src/headers/rooms/sell/: cell.cpp  cell.hpp  const_neural_mini8(1).hpp  const_neural_mini8.hpp  get_L1_cache_size.hpp  objects.hpp
